--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "migrate": "prisma migrate dev",
     "seed": "node prisma/seed.js",
-    "generate": "prisma generate"
+    "postinstall": "prisma generate",
+    "build": "prisma generate && next build"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
